<resources>
    <string name="app_name">Horde Map</string>
    <string name="Distance">Distance</string>
    <string name="load_map">Load Polygon</string>
    <string name="show_distance">Show Distance</string>
    <string name="info_button">Information</string>
    <string name="clear_path">Clear Path</string>
    <string name="show_path">Show Path</string>
    <string name="hide_path">Hide Path</string>
    <string name="save_path">Save Path</string>
    <string name="load_path">Load Path</string>
    <string name="delete_all">Delete All</string>
    <string name="self_marker_change">Select Your Marker</string>
    <string name="time_to_send_data">Data Sending Frequency</string>
    <string name="marker_size">Marker Size</string>
    <string name="user_marker_size">User Marker Size</string>
    <string name="timeToSenData">Request GPS in: </string>
    <string name="myMarker">My Marker</string>
    <string name="settings">Settings</string>
    <string name="statikMarkerSize">Marker Size</string>
    <string name="name_must_be_3">Name must be at least 3 letters</string>
    <string name="myName">My Name:</string>
    <string name="sec">sec</string>
    <string name="hintAnonim">Anonymous</string>
    <string name="todo">TODO</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="clean_map">Clear Map</string>
    <string name="put_name_here">Enter Name</string>
    <string name="fine_location_permission_rationale">Data collection is necessary for the proper functioning of the application, please grant permission.</string>
    <string name="fine_permission_denied_explanation">You have denied data collection, but it is necessary for the proper functioning of the application, please grant permission.</string>
    <string name="back_location_access_rationale_title_text">Background Geodata Access.</string>
    <string name="back_location_permission_rationale_details_text">Background geodata collection is necessary for the proper functioning of the application, please grant permission. \n \n \tChoose "Allow all the time".</string>
    <string name="name_rationale_details_text">\tPlease enter your Name.</string>
    <string name="background_permission_denied_explanation">You have denied background data collection, but it is necessary for the proper functioning of the application, please grant permission manually.</string>
    <string name="fine_location_access_rationale_title_text">Geodata Access.</string>
    <string name="fine_location_access_rationale_details_text">Please grant the app access to geodata. \n \n \tIt is necessary for the proper functioning of the application.</string>
    <string name="info">For the correct operation of the application, it is necessary to collect your location data to enable the geodata exchange function and the construction of the route of the path taken, including in the background, even if the application is closed and not in use. \n \n \tWe do not transmit your location data to third parties and use them only within our application, including for transmission to other users.</string>
    <string name="info_title">Disclosure of Information.</string>
    <string name="back_working">ALLOW BACKGROUND WORK</string>
    <string name="back_working_title">Background Operation Permission.</string>
    <string name="back_working_details_text">Please allow the application to work in the background. \n \n \tThis is necessary for background data collection.</string>
    <string name="i_accept">I UNDERSTAND</string>
    <string name="enable_fine_location_button_text">ALLOW TRANSMISSION</string>
    <string name="cancel">Cancel</string>
    <string name="number09">Enter point number 0–9</string>
    <string name="entry_text">Enter title</string>
    <string name="entry_message">Enter message</string>
    <string name="put">Set</string>
    <string name="select_src">Select upload source:</string>
    <string name="from_server">Load from Server</string>
    <string name="from_files">From File System</string>
    <string name="last_saved_map">Last Loaded Map</string>
    <string name="auto_load_map">Auto Load Last Map</string>
    <string name="choose_icon">Choose Icon:</string>
    <string name="download_file">Download File</string>
    <string name="wait_download">Please wait, the file is downloading</string>
    <string name="send">Send</string>
    <string name="added_image">Send Image:</string>
    <string name="descriptions">Description</string>
    <string name="send_as_file">Send as File:</string>
    <string name="my_track">My Track</string>
    <string name="my_tracks">My Tracks</string>
    <string name="my_current_track">Current Track</string>
    <string name="confirm">Confirm</string>
    <string name="rename_track">Rename Track</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="date">Date</string>
    <string name="map">Map</string>
    <string name="tracks">Tracks</string>
    <string name="chat">Chat</string>
    <string name="horde_chat">Horde Chat</string>
    <string name="clean">Clear</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="file">File</string>
    <string name="put_marker">Place Marker</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="hello">"Hello "</string>
    <string name="minimal_distance_should_be">The minimum distance must be greater than 300 meters.</string>
    <string name="web_client_id" translatable="false">1031356381967-tiqhkb2klhoch66qfs68q7jke6c2opn2.apps.googleusercontent.com</string>
    <string name="welcome_to_horde_map">Welcome to Horde Map</string>
    <string name="please_sign_in_to_continue">login to continue</string>
    <string name="login_as_anonymous">Login as Anonymous</string>
    <string name="login_with_google">Login with Google</string>
    <string name="nickname">Nickname:</string>
    <string name="load_map_filed">Download failed</string>
    <string name="load_map_started">Downloading has started, please wait…</string>
    <string name="wrong_format_file">Invalid file format</string>
    <string name="file_wrong">Problem with the file or incorrect format</string>
    <string name="logout">Logout</string>
    <string name="change_name">Change name</string>
    <string name="map_empty">No saved map</string>
    <string name="no_gps_connection">No GPS connection</string>
    <string name="reply_to">Reply to:</string>
    <string name="edit">Edit</string>
    <string name="reply">Reply</string>
    <string name="copy">Copy</string>
    <string name="editing">Editing:</string>
    <string name="upload_failed">Upload failed</string>
    <string name="time_after_restart">Restart application required to update time to request</string>
    <string name="horde_map_gps">Receives GPS data in the background</string>
    <string name="delete_marker">Delete Marker</string>
    <string name="group">Group:</string>
    <string name="group_general">General</string>
    <string name="changeUserGroup">Change Group</string>
    <string name="enter_group_number">Or enter group number</string>
    <string name="_1_9">1–99</string>
    <string name="stayInDefaultGroup">Stay in the general group</string>
    <string name="group_number_must_be_0_10">Group number must be 1–99</string>
    <string name="group_general_short">Gen</string>
    <string name="select_group">Select group:</string>
    <string name="numara">№</string>
    <string name="map_list">Map list:</string>
    <string name="only_for_me">Only for me</string>
    <string name="new_messages">New messages</string>
    <string name="users_in_group">Users in group:</string>
    <string name="members">members</string>
    <string name="last_seen">last seen</string>
    <string name="unknown">unknown</string>
    <string name="default_group">default</string>
    <string name="group_is">Group:</string>
    <string name="password">Password: </string>
    <string name="show_ruler">Show ruler</string>
    <string name="zoom_volume_btn">Zoom by volume buttons</string>
    <string name="show_coordinates">Show coordinates</string>
    <string name="show_coordinates_in_gauss">Show Gauss coordinates (SK42)</string>
    <string name="show_compass">Show compass</string>
</resources>
