<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginBottom="150dp"
    android:background="@drawable/round_white"
    android:minWidth="270dp"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvGroupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/horde_chat"
        android:fontFamily="@font/inter_semibold"
        android:textColor="@color/main_green_dark"
        android:textSize="22sp" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvUsersCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/members"
        android:textColor="@color/main_green_dark"
        android:textSize="16sp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUsersCount"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="start"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="12dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@drawable/border"
        android:layout_marginBottom="15dp"
        android:text="@string/cancel"
        android:textColor="@color/main_green_dark" />

</androidx.appcompat.widget.LinearLayoutCompat>
