<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentatin.MainActivity">

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="119dp"
        android:layout_height="99dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/margin_normal"
        android:src="@drawable/ic_location_on_24px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/margin_normal"
        android:gravity="center_horizontal"
        android:text="@string/fine_location_access_rationale_title_text"
        android:textSize="@dimen/fragment_permission_title_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconImageView" />

    <TextView
        android:id="@+id/detailsTextView"
        android:layout_width="0dp"
        android:padding="8dp"
        android:background="@drawable/border"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="@dimen/margin_normal"
        android:text="@string/fine_location_access_rationale_details_text"
        android:textSize="@dimen/fragment_permission_body_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />


    <EditText
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/put_name_here"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/btnUserNameRequest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/permissionBackgroundRequestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_dark"
        android:textColor="@color/main_green"
        android:padding="15dp"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginBottom="80dp"
        android:text="@string/enable_background_location_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBackWorking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_dark"
        android:textColor="@color/main_green"
        android:padding="15dp"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginBottom="80dp"
        android:text="@string/back_working"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/permissionRequestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginBottom="80dp"
        android:padding="15dp"
        android:background="@drawable/border_dark"
        android:textColor="@color/main_green"
        android:text="@string/enable_fine_location_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:padding="15dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/border_dark"
        android:textColor="@color/main_green"
        android:text="@string/i_accept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUserNameRequest"
        android:layout_width="wrap_content"
        android:padding="15dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginBottom="80dp"
        android:background="@drawable/border_dark"
        android:textColor="@color/main_green"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>