<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/round_white"
    android:padding="16dp"
    android:minWidth="270dp"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSelectGroup"
        android:textColor="@color/main_green_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map_list"
        android:layout_margin="8dp"
        android:textSize="22sp"/>



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMapList"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    <ImageView
        android:id="@+id/img_loading_files"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:srcCompat="@drawable/img_marker_red"
        android:contentDescription="@string/todo"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSelectMapCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:padding="15dp"
            android:text="@string/cancel"
            android:textColor="@color/main_green_dark" />



    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>
